--- a/Public/Addons/Advs/widget.html
+++ b/Public/Addons/Advs/widget.html
@@ -12,7 +12,7 @@
         <div class="ggs">
             <div class="ggBox" id="ggBox">
         	  <volist name="list.res" id="lo" key="k">
-                <a href="{$lo.link}" target="_blank" title="{$lo.title}" <if condition="$k eq 1">style="z-index: 3; opacity: 4;"</if> ><img src="__ROOT__{$lo.path}" alt="" /></a>
+                <a href="{$lo.link}" target="_blank" title="{$lo.title}" <if condition="$k eq 1">style="z-index: 3; opacity: 4;"</if> ><img height="{$list['height']}" width="{$list['width']}"src="__ROOT__{$lo.path}" alt="" /></a>
               </volist>
             </div>
         </div>
@@ -28,7 +28,7 @@
 <elseif condition="$list['type'] eq 3" />
 	<div style="width:{$list['width']};height:{$list['height']};background: #cecece;"><div style="margin:0px auto;width:150px;line-height: 30px;">{$list.advstext}</div></div>
 <elseif condition="$list['type'] eq 1" />
-	单图广告
+	这里是广告
 <elseif condition="$list['type'] eq 4" />
 	代码广告
 </if>
